feat: Use postgresql database instead of mongodb database